# jotpad

./: .gitignore  CMakeLists.txt  README.md  jotpad.desktop
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  package-deb.yml  package.yml
packaging/: jotpad.spec
po/: jotpad.pot
po/sv/: jotpad.po
po/sv/LC_MESSAGES/: jotpad.po
qml/: Main.qml  TabButton.qml
src/: main.cpp  notemodel.cpp  notemodel.h
